# seqtool

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  _config.yml  appveyor.yml  build.rs  dist-workspace.toml
.github/workflows/: ci.yaml  release.yaml  test.yaml
_pages/: concat.md  count.md  del.md  filter.md  find.md  head.md  interleave.md  lower.md  mask.md  meta.md  opts.md  pass.md  ranges.md  replace.md  revcomp.md  sample.md  set.md  slice.md  sort.md  split.md  stat.md  tail.md  trim.md  unique.md  upper.md  var_reference.md  view.md
ci/: before_deploy.ps1  before_deploy.sh  script.sh
doc/: _desc.md  _head.md  attributes.md  count.md  filter.md  find.md  lists.md  mask.md  pandoc.css  pass.md  performance.md  properties.md  ranges.md  replace.md  split.md  stat.md  trim.md  variables.md  view.md
js/: include.js
profile/: README.md  comparison_commands.yaml  fastq_urls.txt
scripts/: compare_tools.py  demux_test.sh  gen_ambig_map.py  gen_help.sh  gen_html_help.sh  gen_matrix.py  parse_varhelp.py  summarize_comparison.py  time.sh  validate_features.sh  validate_js_parser.sh
src/: cfg.rs  cli.rs  config.rs  context.rs  error.rs  help.rs  macros.rs  main.rs  opt.rs
src/cmd/: concat.rs  count.rs  del.rs  filter.rs  head.rs  interleave.rs  lower.rs  mask.rs  mod.rs  pass.rs  replace.rs  revcomp.rs  sample.rs  set.rs  slice.rs  sort.rs  split.rs  stat.rs  tail.rs  trim.rs  unique.rs  upper.rs  view.rs
src/cmd/cmp/: cli.rs  complete.rs  in_order.rs  mod.rs  output.rs  vars.rs
src/cmd/find/: ambig.rs  cli.rs  helpers.rs  matches.rs  mod.rs  opts.rs  vars.rs
src/cmd/find/matcher/: approx.rs  exact.rs  mod.rs  regex.rs
src/cmd/find/matcher/fuzzy/: align.rs  handle.rs  mod.rs  myers.rs  ukkonen.rs
src/cmd/shared/: item.rs  key.rs  key_var.rs  mod.rs  sort_item.rs  tmp_store.rs  twoway_iter.rs
src/cmd/sort/: cli.rs  file.rs  item.rs  mem.rs  mod.rs  var.rs  vars.rs
src/cmd/unique/: cli.rs  file.rs  map.rs  mem.rs  mod.rs  vars.rs
src/cmd/view/: cli.rs  color.rs  fmt.rs  mod.rs  pager.rs  pal.rs
src/helpers/: any.rs  bytesize.rs  complement.rs  heap_merge.rs  k_merge.rs  macros.rs  mod.rs  number.rs  replace.rs  rng.rs  seqtype.rs  slice.rs  thread_local.rs  tmp_store.rs  util.rs  val.rs  value.rs  var_range.rs  vec.rs  write_list.rs
src/io/: csv.rs  fa_qual.rs  fasta.rs  fastq.rs  fastx.rs  format.rs  mod.rs  qual_format.rs  record.rs
src/io/input/: csv.rs  fa_qual.rs  fasta.rs  fastq.rs  fastx.rs  mod.rs  parallel_csv.rs  reader.rs
src/io/output/: attr.rs  csv.rs  fa_qual.rs  fasta.rs  fastq.rs  fastx.rs  mod.rs  prop.rs  writer.rs
src/lib/: bytesize.rs  inner_result.rs  key_value.rs  lazy_value.rs  mod.rs  rng.rs  seqtype.rs  subst_matrix.rs  twoway_iter.rs  util.rs
src/lib/thread_io/: read.rs  write.rs
src/pattern_matching/: Cargo.toml
src/pattern_matching/benches/: benches.rs
src/pattern_matching/src/: lib.rs  myers.rs
src/test/: cmp.rs  compress.rs  concat.rs  convert.rs  count.rs  del.rs  filter.rs  find.rs  head.rs  interleave.rs  lower.rs  mask.rs  mod.rs  pass.rs  replace.rs  revcomp.rs  sample.rs  set.rs  slice.rs  sort.rs  split.rs  stat.rs  tail.rs  test_find.rs  tests.rs  trim.rs  unique.rs  upper.rs  vars.rs
src/thread_io/: Cargo.toml
src/thread_io/benches/: bench.rs  reader.rs  writer.rs
src/thread_io/src/: lib.rs  read.rs  write.rs
src/thread_io/tests/: read.rs  write.rs
src/var/: attr.rs  build.rs  func.rs  mod.rs  parser.rs  prop.rs  symbols.rs  var.rs  varstring.rs
src/var/modules/: attr.rs  builtins.rs  cnv.rs  expr.rs  expr_exprtk.rs  general.rs  list.rs  meta.rs  mod.rs  prop.rs  stats.rs
src/var/modules/expr/: expressions.rs  js.rs  mod.rs  one_expr.rs  script.rs  var_provider.rs
src/var/modules/expr/js/: expr.rs  mod.rs  parser.rs
var_provider/: Cargo.toml
var_provider/src/: func.rs  lib.rs  usage.rs  var_provider.rs
var_provider/variable_enum_macro/: Cargo.toml
var_provider/variable_enum_macro/src/: lib.rs
wix/: main.wxs
