[package]
name = "seqtool"
version = "0.4.0-beta.1"
edition = "2021"
authors = ["<markschl19@gmail.com>"]
description = "General purpose tool for reading, modifying and writing biological sequences."
license = "MIT"
repository = "https://github.com/markschl/seq_io"
documentation = "https://docs.rs/seq_io"
readme = "README.md"
build = "build.rs"

[workspace]
members = ["var_provider", "var_provider/variable_enum_macro"]

[dependencies]
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memchr = "2.7"
winnow = { version = "0.6", features = ["simd"] }
vec_map = "0.8"
deepsize = "0.2"
itertools = "0.13"
bytecount = "0.6"
strum = "0.26"
strum_macros = "0.26"
bstr = { version = "1.9", default-features = false, features = ["std"] }
lexical = { version = "6.1.1", default-features = false, features = ["parse-floats", "parse-integers", "parse", "write-floats"] }
ordered-float = { version = "4.2", default-features = false, features = ["std", "rkyv", "rkyv_ck"] }
cfg-if = "1.0"
# CLI
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
textwrap = { version = "0.16", default-features = false }
# I/O
seq_io = "0.3.2"
thread_io = "0.3"
csv = "1.3"
# compression formats (behind feature flags)
flate2 = { version = "1.0.30", default-features = false, features = ["zlib-ng"], optional = true }
bzip2 = { version = "0.4", optional = true }
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.13", default-features = false, features = ["bindgen", "zdict_builder"], optional = true }
# variables / functions
var_provider = { path = "var_provider" }
variable_enum_macro = { path = "var_provider/variable_enum_macro" }
# JS expressions
rquickjs = { version = "0.5", features=["classes", "properties", "bindgen", "rust-alloc", "macro"], optional=true }
phf = { version = "0.11", features = ["macros"], optional = true }
# find, replace, revcomp, view commands
bio = { version = "1.6", default-features = false }
regex-lite = { version = "0.1", optional = true }
regex = { version = "1.10", optional = true }
# view command
palette = { version = "0.7", default-features = false, features = ["std", "named_from_str"], optional = true }
enterpolation = { version = "0.2", default-features = false, features = ["std", "linear"], optional = true }
termcolor = { version = "1.4", optional = true }
ansi_colours = { version = "1.2", optional = true }
# sample command
rand = { version = "0.8", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
# sort / unique commands
indexmap = { version = "2.2", optional = true }
rkyv = { version = "0.7", features = ["validation"], optional = true}
byteorder = { version = "1.5", optional = true }
tempdir = { version = "0.3", optional = true }

[target.'cfg(unix)'.dependencies]
# view command
pager = { version = "0.16", optional = true }

[build-dependencies]
regex-lite = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
approx = "0.5"
rand = "0.8"
rand_xoshiro = "0.6.0"
tempdir = "0.3"
lazy_static = "1.4"

[features]
default = ["all-commands", "regex-fast", "expr", "gz", "lz4", "zstd"]
# JavaScript expressions
expr = ["rquickjs", "phf"]
# Compression formats
gz = ["flate2"]
lz4 = ["dep:lz4"]
zstd = ["dep:zstd"]
bz2 = ["bzip2"]
# Regex searching in find/replace
regex-fast = ["regex"]  # adds ~1.4 MiB to binary (Linux)
# Commands
all-commands = [
    "palette", "enterpolation", "termcolor", "ansi_colours", "pager",  # view
    "rand", "rand_xoshiro",  # sample
    "indexmap", "rkyv", "byteorder", "tempdir",  # sort, unique
    "regex-lite",  # find, replace
]
pass = []
view = ["palette", "enterpolation", "termcolor", "ansi_colours", "pager"]
count = []
stat = []
head = []
tail = []
slice = []
sample = ["rand", "rand_xoshiro"]
sort = ["indexmap", "rkyv", "byteorder", "tempdir"]
unique = ["indexmap", "rkyv", "byteorder", "tempdir"]
filter = []
split = []
interleave = []
find = ["regex-lite"]
replace = ["regex-lite"]
del = []
set = []
trim = []
mask = []
upper = []
lower = []
revcomp = []
concat = []

[[bin]]
path = "src/main.rs"
name = "st"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
#debug=true
#opt-level = "z"
