[package]
name = "seqtool"
version = "0.4.0-beta.3"
edition = "2021"
authors = ["Markus Schlegel <markschl19@gmail.com>"]
description = "General-purpose tool for reading, modifying and writing biological sequences."
license = "MIT"
repository = "https://github.com/markschl/seqtool"
readme = "README.md"
build = "build.rs"

[workspace]
members = ["var_provider", "var_provider/variable_enum_macro"]

[dependencies]
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memchr = "2.7"
winnow = { version = "0.6", features = ["simd"] }
vec_map = "0.8"
deepsize = "0.2"
itertools = "0.14"
bytecount = "0.6"
strum = "0.26"
strum_macros = "0.26"
lexical = { version = "7.0", default-features = false, features = ["parse-floats", "parse-integers", "parse", "write-floats"] }
atoi = "2.0"
ordered-float = { version = "4.6", default-features = false, features = ["std", "rkyv", "rkyv_ck"] }
cfg-if = "1.0"
lazy_static = "1.4"
# CLI
clap = { version = "4.5", features = ["derive", "help", "wrap_help", "env"] }
textwrap = { version = "0.16", default-features = false }
color-print = { version = "0.3", features = ["terminfo"] }
# I/O
seq_io = "0.3.2"
thread_io = "0.3"
csv = "1.3"
# compression formats (behind feature flags)
flate2 = { version = "1.0.30", default-features = false, features = ["zlib-ng"], optional = true }
bzip2 = { version = "0.5", optional = true }
lz4 = { version = "1.28", optional = true }
zstd = { version = "0.13", default-features = false, features = ["bindgen", "zdict_builder"], optional = true }
# variables / functions
var_provider = { path = "var_provider" }
variable_enum_macro = { path = "var_provider/variable_enum_macro" }
# JS expressions
rquickjs = { version = "0.8", features=["classes", "properties", "bindgen", "rust-alloc", "macro"], optional=true }
phf = { version = "0.11", features = ["macros"], optional = true }
# find, replace, revcomp, view commands
bio = { version = "2.0", default-features = false }
regex-lite = { version = "0.1", optional = true }
regex = { version = "1.11", optional = true }
# view command
palette = { version = "0.7", default-features = false, features = ["std", "named_from_str"], optional = true }
enterpolation = { version = "0.2", default-features = false, features = ["std", "linear"], optional = true }
termcolor = { version = "1.4", optional = true }
ansi_colours = { version = "1.2", optional = true }
# sample command
rand = { version = "0.8", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
# sort / unique commands
indexmap = { version = "2.2", optional = true }
# TODO: update (but ordered-float needs to update first)
rkyv = { version = "0.7", features=["validation"], optional = true}
byteorder = { version = "1.5", optional = true }
tempfile = { version = "3.15", optional = true }

[target.'cfg(unix)'.dependencies]
# view command
pager = { version = "0.16", optional = true }

[build-dependencies]
regex-lite = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
approx = "0.5"
rand = "0.8"
rand_xoshiro = "0.6.0"
tempfile = "3.10"

[features]
default = ["all-commands", "regex-fast", "expr", "gz", "bz2", "lz4", "zstd"]
# JavaScript expressions
expr = ["rquickjs", "phf"]
# Compression formats
gz = ["flate2"]
lz4 = ["dep:lz4"]
zstd = ["dep:zstd"]
bz2 = ["bzip2"]
# Regex searching in find/replace
regex-fast = ["regex"]  # adds ~1.4 MiB to binary (Linux)
# Commands
all-commands = [
    "palette", "enterpolation", "termcolor", "ansi_colours", "pager",  # view
    "rand", "rand_xoshiro",  # sample
    "indexmap", "rkyv", "byteorder", "tempfile",  # sort, unique
    "regex-lite",  # find, replace
]
pass = []
view = ["palette", "enterpolation", "termcolor", "ansi_colours", "pager"]
count = []
stat = []
head = []
tail = []
slice = []
sample = ["rand", "rand_xoshiro"]
sort = ["indexmap", "rkyv", "byteorder", "tempfile"]
unique = ["indexmap", "rkyv", "byteorder", "tempfile"]
filter = []
split = []
interleave = []
find = ["regex-lite"]
replace = ["regex-lite"]
del = []
set = []
trim = []
mask = []
upper = []
lower = []
revcomp = []
concat = []

[[bin]]
path = "src/main.rs"
name = "st"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.15.1"
ci = "github"
installers = ["shell", "powershell", "msi"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"
install-updater = false

[package.metadata.wix]
upgrade-guid = "41883C8F-F72D-46C8-A526-F415D0511C8F"
path-guid = "12F3E865-70E4-4FA2-BA01-D728DF2B14E1"
license = false
eula = false
