[package]
name = "seqtool"
version = "0.4.0"
edition = "2024"
authors = ["Markus Schlegel <markschl19@gmail.com>"]
description = "General-purpose tool for reading, modifying and writing biological sequences."
license = "MIT OR Apache-2.0"
repository = "https://github.com/markschl/seqtool"
homepage = "https://github.com/markschl/seqtool"
readme = "README.md"
build = "build.rs"

[workspace]
members = ["var_provider", "var_provider/variable_enum_macro"]

[dependencies]
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memchr = "2.7"
winnow = { version = "0.7", features = ["simd"] }
vec_map = "0.8"
deepsize = "0.2"
itertools = "0.14"
bytecount = "0.6"
strum = "0.27"
strum_macros = "0.27"
lexical = { version = "7.0", default-features = false, features = ["parse-floats", "parse-integers", "parse", "write-floats"] }
atoi = "2.0"
ordered-float = { version = "5.0", default-features = false, features = ["std", "rkyv", "rkyv_ck"] }
cfg-if = "1.0"
# CLI
clap = { version = "4.5", features = ["derive", "help", "wrap_help", "env"] }
textwrap = { version = "0.16", default-features = false }
color-print = { version = "0.3" }
# I/O
seq_io = "0.3.4"
thread_io = "0.3"
csv = "1.4"
# compression formats (behind feature flags)
bzip2 = { version = "0.6", optional = true }
lz4 = { version = "1.28", optional = true }
zstd = { version = "0.13", default-features = false, features = ["zdict_builder"], optional = true }
# variables / functions
var_provider = { path = "var_provider", version = "0.4.0" }
variable_enum_macro = { path = "var_provider/variable_enum_macro", version = "0.4.0" }
# JS expressions
rquickjs = { version = "0.10", features=["classes", "properties", "rust-alloc", "macro"], optional=true }
phf = { version = "0.13", features = ["macros"], optional = true }
# find, replace, revcomp, view commands
bio = { version = "3.0", default-features = false }
regex-lite = { version = "0.1", optional = true }
regex = { version = "1.11", optional = true }
# view
ratatui = { version = "0.30", optional = true, default-features = false, features = ["crossterm"] }
# view, cmp
crossterm ={ version = "0.29", optional = true }
# view
palette = { version = "0.7", default-features = false, features = ["std", "named_from_str"], optional = true }
enterpolation = { version = "0.3", default-features = false, features = ["std", "linear"], optional = true }
# sample
rand = { version = "0.9", optional = true }
rand_xoshiro = { version = "0.7.0", optional = true }
# sort / unique / cmp commands
indexmap = { version = "2.10", optional = true }
# cmp
ringmap = { version = "0.2", optional = true }
# TODO: v0.8 update blocked by https://github.com/reem/rust-ordered-float/issues/163
rkyv = { version = "0.7", optional = true}
byteorder = { version = "1.5", optional = true }
tempfile = { version = "3.20", optional = true }
serde = "1.0"
serde_json = "1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies.flate2]
version = "1.1"
default-features = false
features = ["zlib-ng"]
optional = true

[target.'cfg(target_os = "windows")'.dependencies.flate2]
version = "1.1"
optional = true

[build-dependencies]
regex-lite = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
approx = "0.5"
rand = "0.9"
rand_xoshiro = "0.7"
tempfile = "3.10"

[features]
default = ["all-commands", "regex-fast", "expr", "gz", "bz2", "lz4", "zstd"]
# JavaScript expressions
expr = ["rquickjs", "phf"]
# Compression formats
gz = ["flate2"]
lz4 = ["dep:lz4"]
zstd = ["dep:zstd"]
bz2 = ["bzip2"]
# Regex searching in find/replace
regex-fast = ["regex"]  # adds ~1.4 MiB to binary (Linux)
# Commands
all-commands = [
    "palette", "enterpolation", # view
    "ratatui", "crossterm", # view, cmp
    "rand", "rand_xoshiro",  # sample
    "indexmap", "ringmap", "rkyv", "byteorder", "tempfile",  # sort, unique, cmp
    "regex-lite",  # find, replace
]
pass = []
view = ["palette", "enterpolation", "crossterm"]
count = ["rkyv"]
stat = []
head = []
tail = []
slice = []
sample = ["rand", "rand_xoshiro"]
sort = ["indexmap", "rkyv", "byteorder", "tempfile"]
unique = ["indexmap", "rkyv", "byteorder", "tempfile"]
filter = []
split = []
cmp = ["ringmap", "indexmap"]
interleave = []
find = ["regex-lite"]
replace = ["regex-lite"]
del = []
set = []
trim = []
mask = []
upper = []
lower = []
revcomp = []
concat = []

[[bin]]
path = "src/main.rs"
name = "st"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
#debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[package.metadata.wix]
upgrade-guid = "41883C8F-F72D-46C8-A526-F415D0511C8F"
path-guid = "12F3E865-70E4-4FA2-BA01-D728DF2B14E1"
license = false
eula = false
