[package]
name = "variable_enum_macro"
version = "0.4.0-beta.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
var_provider = { path=".." }
proc-macro2 = "1.0.79"
quote = "1.0.36"
itertools = "0.14"
syn = { version = "2.0.58" }
strum = "0.27"
strum_macros = "0.27"

[lib]
proc-macro = true
